# mil2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  NOTES.md  README.md  colcon_defaults.yaml  cyclone.xml  data.txt  frames_2025-06-26_10.08.23.gv  gzrun.sh  joe_shmore.py  pixi.toml  requirements.txt  sub9.urdf  test.txt  zenoh_config.json5
ext/struct_pack/: .clang-tidy  .gitignore  justfile  meson.build
ext/struct_pack/include/: struct_pack.hpp
ext/struct_pack/include/struct_pack/: calcsize.hpp  data_view.hpp  debug.hpp  format.hpp  log.hpp  new_format.hpp  new_pack.hpp  pack.hpp  print.hpp  string.hpp  string_fmt.hpp  string_literal.hpp  unpack.hpp
ext/struct_pack/tests/: CMakeLists.txt  binary_compatibility_test.cpp  calcsize_test.cpp  constexpr_compare.hpp  constexpr_require.hpp  demo.cpp  format_test.cpp  main.cpp  meson.build  newpack_test.cpp  pack_test.cpp  string_literal_test.cpp  string_test.cpp  unpack_test.cpp
src/depth_anything_v2/: package.xml  setup.cfg  setup.py
src/depth_anything_v2/depth_anything_v2/: depth_anything_node.py  test_model.py
src/mil_common/electrical_protocol/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mil_common/electrical_protocol/electrical_protocol/: __init__.py  driver.py  driver_noros.py
src/mil_common/electrical_protocol/electrical_protocol/examples/: calculator_device.py
src/mil_common/electrical_protocol/src/: driver.cpp  thrust_kill_board.cpp
src/mil_common/electrical_protocol/test/: calculator_device.py  calculator_device_noros.py  test_driver.cpp  test_packet.cpp  test_serial.cpp  test_simulated_basic.py  test_simulated_noros.py
src/mil_common/electrical_protocol_cpp/: CMakeLists.txt  package.xml
src/mil_common/electrical_protocol_cpp/include/: cppystruct.h
src/mil_common/electrical_protocol_cpp/src/: driver.cpp  packet.cpp
src/mil_common/electrical_protocol_cpp/test/: driver.cpp  packet.cpp
src/mil_common/mil_msgs/: CMakeLists.txt  package.xml
src/mil_common/mil_msgs/action/: BagOnline.action  MoveTo.action
src/mil_common/mil_msgs/msg/: DepthStamped.msg  EchoIntensities.msg  HoughTransform.msg  Lines.msg  ObjectDetection.msg  ObjectDetections.msg  ObjectsInImage.msg  PerceptionTarget.msg  PerceptionTargetArray.msg  ProcessedPing.msg  RangeStamped.msg  TrackedDetection.msg  VelocityMeasurements.msg
src/mil_common/mil_msgs/srv/: BagTopics.srv  EstablishSubscriptions.srv  GetGZPose.srv  GetSnapshot.srv  GetStatus.srv
src/mil_common/mil_passive_sonar/: CMakeLists.txt  README.md  package.xml
src/mil_common/mil_passive_sonar/msg/: Debug.msg  HydrophoneSamplesStamped.msg  Ping.msg  ProcessedPing.msg  Triggered.msg
src/mil_common/mil_passive_sonar/scripts/: ping_publisher.py
src/mil_common/mil_passive_sonar/src/: sylphase_ros_bridge.cpp
src/mil_common/mil_poi/: CMakeLists.txt  package.xml
src/mil_common/mil_poi/msg/: POIArray.msg
src/mil_common/mil_preflight/: CMakeLists.txt  README.md  package.xml
src/mil_common/mil_preflight/cfg/: config.json  subjugator.json
src/mil_common/mil_preflight/src/: backend.cpp  frontend.cpp  mil_preflight.cpp  test.cpp  tui.cpp  ui.cpp  widgets.cpp
src/mil_common/mil_preflight_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/mil_common/mil_preflight_plugins/src/: actuator_plugin.cpp  node_plugin.cpp  setup_plugin.cpp  topic_plugin.cpp
src/mil_common/mil_tools/: CMakeLists.txt  package.xml
src/mil_common/mil_tools/hardware/: a.out  test.cpp
src/mil_common/mil_tools/src/: IMUCalibration.py  imu_calibration.py  itertools.cpp  online_bagger_server.cpp  os.cpp  pairedSerial.cpp  string.cpp
src/mil_common/mil_tools/src/fs/: path.cpp
src/mil_common/mil_tools/test/: itertools.cpp  math.cpp  os.cpp  overloaded.cpp  pairedSerial.cpp  random.cpp  ringBuffer.cpp  string.cpp
src/mil_common/online_bagger/: CMakeLists.txt  package.xml
src/mil_common/online_bagger/launch/: test.launch.py
src/mil_common/online_bagger/src/: client.cpp  online_bagger.cpp  server.cpp
src/mil_common/ros2_alarms/: CMakeLists.txt  package.xml
src/mil_common/ros2_alarms/ros2_alarms/: __init__.py  alarms.py  handler_template.py  tx_alarms.py
src/mil_common/ros2_alarms/scripts/: bash_aliases.sh
src/mil_common/ros2_alarms_msgs/: CMakeLists.txt  package.xml
src/mil_common/ros2_alarms_msgs/msg/: Alarm.msg  Alarms.msg
src/mil_common/ros2_alarms_msgs/srv/: AlarmGet.srv  AlarmSet.srv
src/navigator/navigator_bringup/: CMakeLists.txt  package.xml
src/navigator/navigator_bringup/config/: navigator.rviz  navigator_bridge.yaml
src/navigator/navigator_bringup/launch/: gazebo.launch.py  navigator_setup.launch.py  subjugator_setup.launch.py
src/subjugator/meta/: CMakeLists.txt  package.xml
src/subjugator/mission_planner/: CMakeLists.txt  mission_planner_node.cpp  package.xml  servo_controller.hpp
src/subjugator/mission_planner/config/: grasp_targets.yaml
src/subjugator/mission_planner/include/: context.hpp
src/subjugator/mission_planner/logs/: mission_debug.txt
src/subjugator/mission_planner/src/: mission_planner_node.cpp
src/subjugator/mission_planner/subjugator_missions/: pc_nav_channel.xml  servo_test_mission.xml
src/subjugator/mission_planner/test/: test_center_camera_logic.cpp  test_detection_gate.cpp  test_quat_math.cpp  test_ros_time_budget.cpp  test_search_pattern.cpp  test_select_basket_logic.cpp  test_select_face_symbol_logic.cpp  test_select_target_logic.cpp  test_target_projection.cpp
src/subjugator/subjugator_msgs/: CMakeLists.txt  package.xml
src/subjugator/subjugator_msgs/action/: Mechanism.action  Move.action  NavChannel.action  NavigateAround.action  NavigateChannel.action  NavigateThrough.action  SearchObject.action  SonarFollower.action  StartGate.action  StartGate_1.action  TrackObject.action  TrashPickup.action  Wait.action  Waypoint.action  YawTracker.action
src/subjugator/subjugator_msgs/msg/: Centroid.msg  Orange.msg  SensorSpike.msg  SensorSpikeArray.msg  Temperature.msg  ThrusterEfforts.msg
src/subjugator/subjugator_msgs/srv/: BMatrix.srv  Servo.srv  Sonar.srv  StringTrigger.srv
(+1352 files in other folders)
