<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>electrical_protocol</name>
  <version>0.0.0</version>
  <description>Software side of the electrical-software communication standard</description>
  <maintainer email="me@cbrxyz.com">Cameron Brown</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>mil_tools</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
