<?xml version="1.0"?>
<package format="3">
  <name>mil_msgs</name>
  <version>2.0.0</version>
  <description>Common ROS msgs,srvs and actions for MIL repos</description>
  <maintainer email="me@cbrxyz.com">Cameron Brown</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/uf-mil/mil2</url>
  <author>Forrest Voight, David Soto</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <cpp cflags="-I${prefix}/include `pkg-config --cflags eigen3`"/>
  </export>
</package>
